name: example
version: 0.0.1
cabal-version: >=1.10

library
  exposed-modules:
    Example.Maybe
    Example.Maybe.Parse
  hs-source-dirs: src
  build-depends: base
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror

executable example
  main-is: Main.hs
  hs-source-dirs: exe
  build-depends: base
               , example
  default-language: Haskell2010
  ghc-options: -O2 -Wall -Werror
